--- a/SignalSeparation/README
+++ b/SignalSeparation/README
@@ -5,6 +5,7 @@ Options:
   -f, --fitToys         fit toys
   -p, --plotResults     plot toy results
   -m, --multiJob        run in parallelization mode
+  --batch		string: name of batch system to submit; either PBS or LXB (default:LXB)
   -t TOOL, --tool=TOOL  string: combine or lands
   -o OUTPUTDIR, --outputDir=OUTPUTDIR
                         string: directory where all outputs go
@@ -14,6 +15,7 @@ Options:
   --nParallelJobs=NPARALLELJOBS
                         int: number of parallel jobs
   -a, --addOutput       bool: when plotting, hadd up root files
+  --TeVStat		use TeVatron test statistics instead of default frequentist (used for hypothesis separation)
 
 -------------------------------
 -------------------------------
@@ -34,7 +36,7 @@ Step 3: plot variables
 python runSignalSeparation.py -b -m -t "lands" --plotResults -a --nParallelJobs 100 --toysPerJob 10 -o "$myodir" --card1 "card1" --card2 "card2"
 
 ** Use the "-a" to add up the results for parallel jobs.  
-** Parallel mode ("-m") only works for the PBS queue system.  Should be updated to work on other batch systems.
+
 
 -------------------------------
 -------------------------------
