--- a/CreateDatacards/README
+++ b/CreateDatacards/README
@@ -3,7 +3,7 @@ Welcome to the package which takes HZZ4l inputs, creates datacards
 for the limit calculation, and provides scripts for running the limits 
 both locally and on the grid
 
-by Matt Snowball and Nhan Tran
+by Matt Snowball 
 ---------------------------------------------------
 
 Getting started...
@@ -16,8 +16,8 @@ Documentation: AnalysisInputs/README
 1. Create datacards for running with LandS or Combination
 Documentation: CreateDatacards/README
 
-2. Run datacards on local cluster (support for UF, JHU, lxplus) or the GRID
-Documentation: RunLimits/README
+2. Run SignalSeparation
+Documentation: SignalSeparation/MEKD/README
 
 #########################################################
 
@@ -25,18 +25,22 @@ Documentation: RunLimits/README
 
 ### Q U I C K   S T A R T   R E C I P E
 ## Getting setup...
-cmsrel CMSSW_6_1_0
-cd CMSSW_6_1_0/src/
-cvs co -r HEAD HiggsAnalysis/CombinedLimit
+cmsrel CMSSW_6_1_1
+cd CMSSW_6_1_1/src/
+cvs co -r V03-01-00 HiggsAnalysis/CombinedLimit
 cmsenv
 scram b -j12
 cd ../..
 ## compile HCSaW
 ./buildPackage.sh
 ## check inputs ---> SM_inputs_7TeV and SM_inputs_8TeV
-python makeDCsandWSs.py -i <input directory> -a <output name> -b > output.txt
-## output.txt holds all the messages from creating the cards
+## 2D signal separation
+python makeDCsandWSs.py -b -i <input directory> -a <output name> -t <templateDir>
 
-#### ---> Next proceed to ../RunLimit/README to run limits
+## or 1D signal separation
+python makeDCsandWSs.py -b -i <input directory> -a <output name> -t <templateDir> --unfold
+
+## this will unfold the 2D templates and use TH1Fs and plain root files 
+## all yields etc should be identical between the 2 cases
 
 
